# s3insync

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
s3insync/: __init__.py  __main__.py  cli.py  operations.py  repositories.py  sync_decider.py
s3insync/cmd/: pull.py
src/: operations.py  repositories.py  sync_decider.py
tests/: test_aws_repo.py  test_localfs_repo.py  test_s3_repo.py  test_sync_decider.py
