[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "s3insync"
author = "Jonathan Stott"
author-email = "jonathan.stott@gmail.com"
home-page = "https://github.com/namelessjon/s3insync"
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires = [
    "boto3 ~=1.16",
    "prometheus_client"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "moto",
    "pyfakefs",
]

[tool.flit.scripts]
s3insync = "s3insync.cli:main"
